# retail-decision-copilot

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: ANALYST_SQL_EXAMPLES.md  Dockerfile  README.md  RETAIL_ANALYTICS_SCHEMA.md  RETAIL_SEED_DATA_PATTERNS.md  alembic.ini  package.json  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  client.py  router.py
apps/api/app/ai/prompts/: analysis_router.md
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  analytics.py  health.py  query.py
apps/api/app/api/schemas/: __init__.py  analytics.py  health.py  query.py
apps/api/app/core/: __init__.py  config.py  logging.py
apps/api/app/db/: __init__.py  seed_retail_analytics.py  session.py
apps/api/app/db/models/: __init__.py  categories.py  inventory_snapshots.py  products.py  promotions.py  regions.py  replenishment_orders.py  returns.py  sales.py  stores.py  suppliers.py
apps/api/app/services/: __init__.py  query_explanation_service.py  query_service.py
apps/api/app/services/analytics/: __init__.py  analytics_service.py  run_samples.py
apps/api/app/sql/: __init__.py
apps/api/app/sql/analytics/: __init__.py  queries.py  registry.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_init.py  0002_retail_analytics_schema.py
apps/api/tests/: conftest.py  test_analytics_api.py  test_analytics_sql_layer.py  test_health.py  test_query_placeholder.py
scripts/: init_db.sh  seed_db.py  (+1 more)
(+39 files in other folders)
