[tool.poetry]
name = "rdc-api"
version = "0.1.0"
description = "Retail Decision Copilot backend (FastAPI)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = ">=0.110,<1.0"
uvicorn = ">=0.27,<1.0"

sqlalchemy = ">=2.0,<3.0"
psycopg = ">=3.1,<4.0"
alembic = ">=1.13,<2.0"

pydantic = ">=2.0,<3.0"
pydantic-settings = ">=2.0,<3.0"

# OpenAI Responses API client
openai = ">=1.0,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
httpx = ">=0.27,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

